src/objects/Admin__c.object
<CustomObject>
    <fields>
        <fullName>CourseDescription_admin__c</fullName>
        <label>CourseDescription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CourseFee_admin__c</fullName>
        <label>CourseFee_admin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CourseTraier__c</fullName>
        <label>CourseTraier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Janelle</fullName>
                </value>
                <value>
                    <fullName>jhon</fullName>
                </value>
                <value>
                    <fullName>Joe</fullName>
                </value>
                <value>
                    <fullName>Rayan</fullName>
                </value>
                <value>
                    <fullName>Tim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courses_admin__c</fullName>
        <label>Courses_admin</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin 101</fullName>
                </value>
                <value>
                    <fullName>Admin 102</fullName>
                </value>
                <value>
                    <fullName>Admin 103</fullName>
                </value>
                <value>
                    <fullName>Admin 104</fullName>
                </value>
                <value>
                    <fullName>Admin 105</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RegistrationNumber_admin__c</fullName>
        <label>RegistrationNumber_admin</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Traing_admin__c</fullName>
        <label>Trainig</label>
        <referenceTo>Trainig__c</referenceTo>
        <relationshipLabel>Admin</relationshipLabel>
        <relationshipName>Admin</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Admin</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Admin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Admin</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>